--- a/app/src/main/res/layout/activity_personalpage.xml
+++ b/app/src/main/res/layout/activity_personalpage.xml
@@ -220,8 +220,8 @@
                     android:textStyle="bold" />
 
                 <HorizontalScrollView
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
+                    android:layout_width="401dp"
+                    android:layout_height="144dp"
                     android:layout_marginLeft="10dp"
                     android:layout_marginTop="10dp"
                     android:layout_marginRight="10dp"
@@ -230,7 +230,7 @@
                     <LinearLayout
                         android:layout_width="wrap_content"
                         android:layout_height="match_parent"
-                        android:orientation="vertical" >
+                        android:orientation="vertical">
 
                         <androidx.recyclerview.widget.RecyclerView
                             android:id="@+id/actHold"
@@ -251,61 +251,21 @@
 
                 <HorizontalScrollView
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
+                    android:layout_height="match_parent"
                     android:layout_marginLeft="10dp"
                     android:layout_marginTop="10dp"
                     android:layout_marginRight="10dp"
-                    android:layout_marginBottom="10dp"
-                    android:background="@drawable/shape_textview">
+                    android:layout_marginBottom="10dp">
 
                     <LinearLayout
-                        android:layout_width="match_parent"
+                        android:layout_width="wrap_content"
                         android:layout_height="match_parent"
-                        android:orientation="horizontal">
+                        android:orientation="vertical" >
 
-                        <LinearLayout
-                            android:layout_width="wrap_content"
-                            android:layout_height="match_parent"
-                            android:layout_marginLeft="20dp"
-                            android:orientation="horizontal">
-
-                            <ImageView
-                                android:id="@+id/activityphoto4"
-                                android:layout_width="121dp"
-                                android:layout_height="match_parent"
-                                android:layout_weight="1"
-                                app:srcCompat="@drawable/head" />
-
-                            <LinearLayout
-                                android:layout_width="wrap_content"
-                                android:layout_height="wrap_content"
-                                android:layout_marginLeft="60dp"
-                                android:orientation="vertical">
-
-                                <TextView
-                                    android:id="@+id/textView3"
-                                    android:layout_width="match_parent"
-                                    android:layout_height="wrap_content"
-                                    android:text="TextView" />
-
-                                <TextView
-                                    android:id="@+id/textView58"
-                                    android:layout_width="match_parent"
-                                    android:layout_height="wrap_content"
-                                    android:gravity="center"
-                                    android:text="@string/actDate"
-                                    android:textSize="20dp" />
-
-                                <TextView
-                                    android:id="@+id/textView54"
-                                    android:layout_width="match_parent"
-                                    android:layout_height="wrap_content"
-                                    android:gravity="center"
-                                    android:text="高雄大學籃球場"
-                                    android:textSize="20dp" />
-                            </LinearLayout>
-
-                        </LinearLayout>
+                        <androidx.recyclerview.widget.RecyclerView
+                            android:id="@+id/actRec"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content" />
                     </LinearLayout>
                 </HorizontalScrollView>
 
@@ -320,93 +280,26 @@
                     android:textSize="24sp"
                     android:textStyle="bold" />
 
-                <LinearLayout
+                <HorizontalScrollView
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
+                    android:layout_height="147dp"
                     android:layout_marginLeft="10dp"
-                    android:layout_marginTop="5dp"
+                    android:layout_marginTop="10dp"
                     android:layout_marginRight="10dp"
-                    android:layout_marginBottom="15dp"
-                    android:orientation="horizontal"
-                    android:gravity="center_horizontal">
+                    android:layout_marginBottom="10dp">
 
                     <LinearLayout
-                        android:id="@+id/friend1"
-                        android:layout_width="109dp"
-                        android:layout_height="wrap_content"
-                        android:background="@drawable/shape_textview"
+                        android:layout_width="wrap_content"
+                        android:layout_height="match_parent"
                         android:orientation="vertical">
 
-                        <de.hdodenhof.circleimageview.CircleImageView
-                            android:id="@+id/users_profile_image2"
-                            android:layout_width="91dp"
-                            android:layout_height="82dp"
-                            android:src="@drawable/head"
-                            app:layout_constraintTop_toTopOf="@id/title" />
-
-                        <TextView
-                            android:id="@+id/textView38"
+                        <androidx.recyclerview.widget.RecyclerView
+                            android:id="@+id/friendList"
                             android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
-                            android:layout_marginTop="10dp"
-                            android:gravity="center"
-                            android:text="roger"
-                            android:textSize="16dp" />
+                            android:layout_height="match_parent" />
                     </LinearLayout>
+                </HorizontalScrollView>
 
-                    <LinearLayout
-                        android:id="@+id/friend2"
-                        android:layout_width="109dp"
-                        android:layout_height="wrap_content"
-                        android:layout_marginLeft="10dp"
-                        android:background="@drawable/shape_textview"
-                        android:orientation="vertical">
-
-                        <de.hdodenhof.circleimageview.CircleImageView
-                            android:id="@+id/users_profile_image3"
-                            android:layout_width="92dp"
-                            android:layout_height="82dp"
-                            android:src="@drawable/head"
-                            app:layout_constraintTop_toTopOf="@id/title" />
-
-                        <TextView
-                            android:id="@+id/textView40"
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
-                            android:layout_marginTop="10dp"
-                            android:gravity="center"
-                            android:text="tzuyen"
-                            android:textSize="16dp" />
-
-                    </LinearLayout>
-
-                    <LinearLayout
-                        android:id="@+id/friend3"
-                        android:layout_width="109dp"
-                        android:layout_height="wrap_content"
-                        android:layout_marginLeft="10dp"
-                        android:background="@drawable/shape_textview"
-                        android:orientation="vertical">
-
-                        <de.hdodenhof.circleimageview.CircleImageView
-                            android:id="@+id/users_profile_image4"
-                            android:layout_width="92dp"
-                            android:layout_height="82dp"
-                            android:src="@drawable/head"
-                            app:layout_constraintTop_toTopOf="@id/title" />
-
-                        <TextView
-                            android:id="@+id/textView41"
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
-                            android:layout_marginTop="10dp"
-                            android:gravity="center"
-                            android:text="weilin"
-                            android:textSize="16sp" />
-
-                    </LinearLayout>
-
-                </LinearLayout>
             </LinearLayout>
         </ScrollView>
 
