--- a/app/src/main/res/layout/activity_testsetting.xml
+++ b/app/src/main/res/layout/activity_testsetting.xml
@@ -27,12 +27,12 @@
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="613dp">
 
         <LinearLayout
             android:id="@+id/bkg"
-            android:layout_width="407dp"
-            android:layout_height="257dp"
+            android:layout_width="450dp"
+            android:layout_height="232dp"
             android:background="?attr/colorPrimary"
             android:orientation="vertical"
             app:layout_constraintEnd_toEndOf="@id/guideline7"
@@ -57,103 +57,90 @@
             app:layout_constraintEnd_toEndOf="@id/guideline7"
             app:layout_constraintStart_toStartOf="@id/guideline7" />
 
-        <EditText
-            android:id="@+id/phone"
-            android:layout_width="250dp"
-            android:layout_height="45dp"
-            android:layout_marginLeft="20dp"
-            android:layout_marginTop="20dp"
-            android:layout_marginRight="20dp"
-            android:background="@drawable/shape_textview"
-            android:gravity="center_horizontal"
-            android:hint="手機"
-            android:inputType="textMultiLine"
-            android:padding="6dp"
-            android:textAlignment="center"
-            android:textColor="@color/colorPrimaryDark"
-            android:textStyle="bold"
-            app:layout_constraintEnd_toEndOf="@id/guideline7"
-            app:layout_constraintHorizontal_bias="0.446"
-            app:layout_constraintStart_toStartOf="@id/guideline7"
-            app:layout_constraintTop_toBottomOf="@id/age" />
+        <ScrollView
+            android:layout_width="411dp"
+            android:layout_height="324dp"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/bkg">
 
-        <EditText
-            android:id="@+id/set_user_name"
-            android:layout_width="250dp"
-            android:layout_height="45dp"
-            android:layout_marginLeft="40dp"
-            android:layout_marginTop="100dp"
-            android:layout_marginRight="40dp"
-            android:background="@drawable/shape_textview"
-            android:gravity="center_horizontal"
-            android:hint="姓名"
-            android:inputType="textMultiLine"
-            android:padding="6dp"
-            android:textAlignment="center"
-            android:textColor="@color/colorPrimaryDark"
-            android:textStyle="bold"
-            app:layout_constraintEnd_toEndOf="@id/guideline7"
-            app:layout_constraintStart_toStartOf="@id/guideline7"
-            app:layout_constraintTop_toBottomOf="@id/set_profile_image" />
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:gravity="center"
+                android:orientation="vertical">
 
-        <EditText
-            android:id="@+id/set_profile_status"
-            android:layout_width="250dp"
-            android:layout_height="45dp"
-            android:layout_marginLeft="20dp"
-            android:layout_marginTop="20dp"
-            android:layout_marginRight="20dp"
-            android:background="@drawable/shape_textview"
-            android:gravity="center_horizontal"
-            android:hint="狀態"
-            android:inputType="textMultiLine"
-            android:padding="6dp"
-            android:textAlignment="center"
-            android:textColor="@color/colorPrimaryDark"
-            android:textStyle="bold"
-            app:layout_constraintEnd_toEndOf="@id/guideline7"
-            app:layout_constraintStart_toStartOf="@id/guideline7"
-            app:layout_constraintTop_toBottomOf="@id/set_user_name" />
+                <EditText
+                    android:id="@+id/set_user_name"
+                    android:layout_width="250dp"
+                    android:layout_height="45dp"
+                    android:layout_marginTop="30dp"
+                    android:background="@drawable/shape_textview"
+                    android:gravity="center_horizontal"
+                    android:hint="姓名"
+                    android:inputType="textMultiLine"
+                    android:padding="6dp"
+                    android:textAlignment="center"
+                    android:textColor="@color/colorPrimaryDark"
+                    android:textStyle="bold" />
 
-        <EditText
-            android:id="@+id/gender"
-            android:layout_width="250dp"
-            android:layout_height="45dp"
-            android:layout_marginLeft="20dp"
-            android:layout_marginTop="20dp"
-            android:layout_marginRight="20dp"
-            android:background="@drawable/shape_textview"
-            android:gravity="center_horizontal"
-            android:hint="性別"
-            android:inputType="textMultiLine"
-            android:padding="6dp"
-            android:textAlignment="center"
-            android:textColor="@color/colorPrimaryDark"
-            android:textStyle="bold"
-            app:layout_constraintEnd_toEndOf="@id/guideline7"
-            app:layout_constraintHorizontal_bias="0.446"
-            app:layout_constraintStart_toStartOf="@id/guideline7"
-            app:layout_constraintTop_toBottomOf="@id/set_profile_status" />
+                <EditText
+                    android:id="@+id/phone"
+                    android:layout_width="250dp"
+                    android:layout_height="45dp"
+                    android:layout_marginTop="30dp"
+                    android:background="@drawable/shape_textview"
+                    android:gravity="center_horizontal"
+                    android:hint="手機"
+                    android:inputType="textMultiLine"
+                    android:padding="6dp"
+                    android:textAlignment="center"
+                    android:textColor="@color/colorPrimaryDark"
+                    android:textStyle="bold" />
 
-        <EditText
-            android:id="@+id/age"
-            android:layout_width="250dp"
-            android:layout_height="45dp"
-            android:layout_marginLeft="20dp"
-            android:layout_marginTop="20dp"
-            android:layout_marginRight="20dp"
-            android:background="@drawable/shape_textview"
-            android:gravity="center_horizontal"
-            android:hint="年齡"
-            android:inputType="textMultiLine"
-            android:padding="6dp"
-            android:textAlignment="center"
-            android:textColor="@color/colorPrimaryDark"
-            android:textStyle="bold"
-            app:layout_constraintEnd_toEndOf="@id/guideline7"
-            app:layout_constraintHorizontal_bias="0.446"
-            app:layout_constraintStart_toStartOf="@id/guideline7"
-            app:layout_constraintTop_toBottomOf="@id/gender" />
+                <EditText
+                    android:id="@+id/gender"
+                    android:layout_width="250dp"
+                    android:layout_height="45dp"
+                    android:layout_marginTop="30dp"
+                    android:background="@drawable/shape_textview"
+                    android:gravity="center_horizontal"
+                    android:hint="性別"
+                    android:inputType="textMultiLine"
+                    android:padding="6dp"
+                    android:textAlignment="center"
+                    android:textColor="@color/colorPrimaryDark"
+                    android:textStyle="bold" />
+
+                <EditText
+                    android:id="@+id/set_profile_status"
+                    android:layout_width="250dp"
+                    android:layout_height="45dp"
+                    android:layout_marginTop="30dp"
+                    android:background="@drawable/shape_textview"
+                    android:gravity="center_horizontal"
+                    android:hint="狀態"
+                    android:inputType="textMultiLine"
+                    android:padding="6dp"
+                    android:textAlignment="center"
+                    android:textColor="@color/colorPrimaryDark"
+                    android:textStyle="bold" />
+
+                <EditText
+                    android:id="@+id/age"
+                    android:layout_width="250dp"
+                    android:layout_height="45dp"
+                    android:layout_marginTop="30dp"
+                    android:background="@drawable/shape_textview"
+                    android:gravity="center_horizontal"
+                    android:hint="年齡"
+                    android:inputType="textMultiLine"
+                    android:padding="6dp"
+                    android:textAlignment="center"
+                    android:textColor="@color/colorPrimaryDark"
+                    android:textStyle="bold" />
+            </LinearLayout>
+        </ScrollView>
 
         <ImageView
             android:id="@+id/set_profile_image"
