--- a/app/src/main/res/layout/activity_maps.xml
+++ b/app/src/main/res/layout/activity_maps.xml
@@ -156,7 +156,7 @@
             app:layout_constraintVertical_bias="0.96" />
 
 
-        <Button
+        <TextView
             android:id="@+id/noticeBtn"
             android:layout_width="45dp"
             android:layout_height="45dp"
@@ -168,20 +168,27 @@
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintVertical_bias="0.94" />
 
+
         <TextView
-            app:layout_constraintBottom_toTopOf="@+id/noticeBtn"
-            app:layout_constraintStart_toEndOf="@+id/noticeBtn"
             android:id="@+id/notice_count"
             android:layout_width="30dp"
             android:layout_height="30dp"
+            android:layout_alignParentRight="true"
+            android:layout_marginEnd="8dp"
+            android:layout_marginRight="8dp"
+            android:layout_marginBottom="64dp"
             android:background="@drawable/red"
             android:gravity="center"
-            android:layout_alignParentRight="true"
             android:text="5"
             android:textColor="#FFFFFF"
-            android:textSize="16sp" />
-
-
+            android:textSize="16sp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toStartOf="@id/collectBtn"
+            app:layout_constraintHorizontal_bias="0.893"
+            app:layout_constraintStart_toStartOf="@id/guideline"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintVertical_bias="0.998"
+            tools:layout_constraintStart_toStartOf="@id/guideline" />
 
         <Button
             android:id="@+id/collectBtn"
