--- a/app/src/main/res/layout/activity_favoritee.xml
+++ b/app/src/main/res/layout/activity_favoritee.xml
@@ -26,15 +26,24 @@
 
     </com.google.android.material.appbar.AppBarLayout>
 
+    <TextView
+        android:id="@+id/title3"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="20dp"
+        android:layout_marginTop="60dp"
+        android:text="收藏頁面"
+        android:textSize="36sp" />
+
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/favorite_recycle"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_above="@+id/myLinearLayout"
-        android:layout_below="@+id/chat_toolbar"
-        android:layout_marginTop="52dp"
+        android:layout_marginTop="102dp"
         android:layout_marginBottom="6dp"
-        app:layout_constraintTop_toBottomOf="@id/appBarLayout"></androidx.recyclerview.widget.RecyclerView>
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="@id/title3"></androidx.recyclerview.widget.RecyclerView>
 
 
 </RelativeLayout>
