--- a/app/src/main/res/layout/activity_testsetting.xml
+++ b/app/src/main/res/layout/activity_testsetting.xml
@@ -25,9 +25,24 @@
     <!--        app:civ_border_width="5dp"-->
     <!--        app:civ_border_color="@color/colorPrimary"/>-->
 
+    <com.google.android.material.appbar.AppBarLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:theme="@style/AppTheme.AppBarOverlay">
+
+        <androidx.appcompat.widget.Toolbar
+            android:id="@+id/toolbar"
+            android:layout_width="match_parent"
+            android:layout_height="?attr/actionBarSize"
+            android:background="?attr/colorPrimary"
+            app:popupTheme="@style/AppTheme.PopupOverlay" />
+
+    </com.google.android.material.appbar.AppBarLayout>
+
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="667dp">
+        android:layout_height="667dp"
+        android:layout_marginTop="50dp">
 
         <LinearLayout
             android:id="@+id/bkg"
