--- a/app/src/main/res/layout/activity_personalpage.xml
+++ b/app/src/main/res/layout/activity_personalpage.xml
@@ -58,10 +58,19 @@
 
                         <Button
                             android:id="@+id/chatView"
-                            android:layout_width="70dp"
-                            android:layout_height="37dp"
-                            android:layout_marginLeft="50dp"
+                            android:layout_width="60dp"
+                            android:layout_height="33dp"
+                            android:layout_marginStart="15dp"
+                            android:layout_marginLeft="15dp"
                             android:background="@drawable/commentpage" />
+
+                        <Button
+                            android:id="@+id/addFriend"
+                            android:layout_width="60dp"
+                            android:layout_height="33dp"
+                            android:layout_marginStart="10dp"
+                            android:layout_marginLeft="10dp"
+                            android:background="@drawable/selfpage" />
                     </LinearLayout>
 
                     <LinearLayout
