--- a/app/src/main/res/layout/activity_friend_request.xml
+++ b/app/src/main/res/layout/activity_friend_request.xml
@@ -8,6 +8,7 @@
 
 
     <com.google.android.material.appbar.AppBarLayout
+        android:id="@+id/appBar"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:theme="@style/AppTheme.AppBarOverlay"
@@ -32,8 +33,7 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        tools:layout_marginTop="70dp">
+        app:layout_constraintTop_toBottomOf="@id/appBar">
 
         <TextView
             android:id="@+id/Title"
