--- a/app/src/main/res/layout/content_signup.xml
+++ b/app/src/main/res/layout/content_signup.xml
@@ -92,14 +92,28 @@
                         android:text="TextView"
                         android:textSize="20sp" />
 
-                    <TextView
-                        android:id="@+id/activityPlace"
+                    <LinearLayout
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:layout_marginTop="5dp"
-                        android:text="TextView"
-                        android:textColor="#5599FF"
-                        android:textSize="20sp" />
+                        android:orientation="horizontal">
+
+                        <TextView
+                            android:id="@+id/textView4"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_marginTop="5dp"
+                            android:text="地點："
+                            android:textSize="20sp" />
+
+                        <TextView
+                            android:id="@+id/activityPlace"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_marginTop="5dp"
+                            android:text="TextView"
+                            android:textColor="#5599FF"
+                            android:textSize="20sp" />
+                    </LinearLayout>
 
                     <TextView
                         android:layout_marginTop="5dp"
@@ -110,13 +124,35 @@
                         android:textSize="20sp" />
 
                     <TextView
-                        android:id="@+id/activityOrgName"
+                        android:id="@+id/actRestriction"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_marginTop="5dp"
                         android:text="TextView"
-                        android:textColor="#5599FF"
                         android:textSize="20sp" />
+
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:orientation="horizontal">
+
+                        <TextView
+                            android:id="@+id/textView9"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:text="發起人："
+                            android:textSize="20sp"
+                            android:layout_marginTop="5dp"/>
+
+                        <TextView
+                            android:id="@+id/activityOrgName"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:layout_marginTop="5dp"
+                            android:text="TextView"
+                            android:textColor="#5599FF"
+                            android:textSize="20sp" />
+                    </LinearLayout>
 
                 </LinearLayout>
 
