--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -16,18 +16,23 @@
 
     <ImageView
         android:id="@+id/imageView2"
-        android:layout_width="181dp"
-        android:layout_height="150dp"
-        android:layout_marginTop="36dp"
+        android:layout_width="120dp"
+        android:layout_height="120dp"
+        android:layout_gravity="center"
+        android:background="@drawable/head"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.497"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.15"
         app:srcCompat="@drawable/head" />
 
     <EditText
         android:id="@+id/editText_verify"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="270dp"
+        android:layout_height="58dp"
+
         android:background="@drawable/shape_textview"
         android:ems="10"
         android:hint="確認密碼"
@@ -41,8 +46,9 @@
 
     <EditText
         android:id="@+id/editText_email"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="270dp"
+        android:layout_height="58dp"
+
         android:background="@drawable/shape_textview"
         android:ems="10"
         android:hint="信箱"
@@ -56,8 +62,9 @@
 
     <EditText
         android:id="@+id/editText_pwd"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="270dp"
+        android:layout_height="58dp"
+
         android:background="@drawable/shape_textview"
         android:ems="10"
         android:hint="密碼"
