--- a/app/src/main/res/layout/activity_personalpage.xml
+++ b/app/src/main/res/layout/activity_personalpage.xml
@@ -47,36 +47,44 @@
                     <LinearLayout
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:orientation="horizontal">
+                        android:layout_marginBottom="5dp"
+                        android:gravity="center"
+                        android:orientation="vertical">
 
                         <TextView
                             android:id="@+id/userName"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
+                            android:gravity="center"
                             android:text="journey"
                             android:textSize="20dp"
                             android:textStyle="bold" />
+                    </LinearLayout>
+
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:gravity="center"
+                        android:orientation="horizontal">
 
                         <Button
                             android:id="@+id/chatView"
                             android:layout_width="60dp"
                             android:layout_height="33dp"
-                            android:layout_marginStart="15dp"
-                            android:layout_marginLeft="15dp"
                             android:background="@drawable/commentpage" />
 
                         <Button
                             android:id="@+id/addFriend"
                             android:layout_width="60dp"
                             android:layout_height="33dp"
-                            android:layout_marginStart="10dp"
-                            android:layout_marginLeft="10dp"
+                            android:layout_marginStart="30dp"
+                            android:layout_marginLeft="30dp"
                             android:background="@drawable/selfpage" />
                     </LinearLayout>
 
                     <LinearLayout
                         android:layout_width="match_parent"
-                        android:layout_height="110dp"
+                        android:layout_height="90dp"
                         android:layout_marginTop="3dp"
                         android:orientation="vertical">
 
